# rabbitMQ-tutorial-study

./: pyproject.toml
tutorial_01/: receive.py
tutorial_02/: worker.py
tutorial_06/: rpc_client.py
