[tool.poetry]
name = "rabbitmq-study"
version = "0.1.0"
description = "Repository to study AMQP with rabbitMQ"
authors = ["hericlesferraz <hericlesferraz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
